syntax = "proto3";

package infraboard.mcenter.deploy;
option go_package = "github.com/infraboard/mcenter/apps/deploy";

message Deploy  {
    // 部署Id
    // @gotags: bson:"_id" json:"id"
    string id = 1;
    // 创建时间
    // @gotags: bson:"create_at" json:"create_at"
    int64 create_at = 2;
    // 更新时间
    // @gotags: bson:"update_at" json:"update_at"
    int64 update_at = 3;
    // 创建信息
    // @gotags: bson:"spec" json:"spec"
    CreateDeployRequest spec = 4;
}

enum TYPE {
    // 基于k8s部署
    KUBERNETES = 0;
    // 基于主机部署
    HOST = 1;
}

message CreateDeployRequest {
    // 那个服务的部署
    // @gotags: bson:"service_id" json:"service_id"
    string service_id = 1;
    // 部署环境
    // @gotags: bson:"environment" json:"environment" validate:"required"
    string environment = 2;
    // 部署资源提供方
    // @gotags: bson:"provider" json:"provider" validate:"required"
    string provider = 3;
    // 部署地域
    // @gotags: bson:"region" json:"region" validate:"required"
    string region = 4;
    // 部署方式
    // @gotags: bson:"type" json:"type"
    TYPE type = 5;
    // 部署的名称
    // @gotags: bson:"name" json:"name"
    string name = 6;
    // 部署描述信息
    // @gotags: bson:"describe" json:"describe"
    string describe = 7;
    // 部署标签
    // @gotags: bson:"tags" json:"tags"
    map<string,string> tags = 8;
}